refactor: 升级1.3.1代码优化、代码生成模板调整